# saliksik-ai

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  Aptfile  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DEV.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_performance_indexes.py  003_add_user_roles.py  004_add_email_verification.py
app/: __init__.py  celery_app.py
app/api/: responses.py
app/api/v1/: __init__.py  analysis.py  auth.py  info.py  plagiarism.py  reviewers.py
app/core/: cache.py  config.py  database.py  deps.py  email.py  exceptions.py  logging.py  nlp_models.py  rate_limit.py  security.py  security_utils.py  utils.py
app/models/: __init__.py  analysis.py  document_fingerprint.py  reviewer.py  user.py
app/schemas/: analysis.py  citation.py  plagiarism.py  reviewer.py  user.py
app/services/: ai_processor.py  citation_analyzer.py  language_detector.py  plagiarism_detector.py  reviewer_matcher.py
app/tasks/: analysis.py
app/utils/: migration.py
docker/: OPTIMIZATION_REPORT.md
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_ROADMAP.md  IMPLEMENTATION_PLAN.md  TASK_CHECKLIST.md
pre_review/: admin.py  ai_processor.py  apps.py  auth_views.py  info_views.py  models.py  test_pre_reviewer.py  tests.py  urls.py  views.py
pre_review/migrations/: 0001_initial.py
pre_review/templates/: homepage.html
saliksik_ai/: asgi.py  settings.py  urls.py  wsgi.py
tests/: benchmark_performance.py  conftest.py  test_analysis.py  test_analysis_endpoint.py  test_auth.py  test_cache.py  test_email_verification.py  test_lockout.py  test_plagiarism.py  test_rate_limit.py  test_rbac.py  test_reviewers.py  test_services.py  test_system.py  verify_tasks.py
