[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saliksik-ai"
version = "2.1.0"
description = "AI-powered manuscript pre-review system for Research Journal Management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Leodyver S. Semilla", email = "support@saliksik.ai"}
]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # FastAPI core
    "fastapi==0.127.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",

    # Database
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "alembic==1.14.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.4.0,<4.0.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.20",
    "email-validator>=2.0.0",

    # AI/ML
    "spacy==3.8.7",
    "nltk==3.9.1",
    "transformers==4.57.1",
    "numpy==2.2.3",
    "pypdf==5.2.0",
    "torch==2.5.1",
    "yake==0.4.8",
    "textstat==0.7.3",

    # Async & Background Tasks
    "celery==5.5.3",
    "redis==5.2.1",

    # Utilities
    "python-decouple==3.8",

    # Enhancement Features
    "datasketch==1.8.0",
    "xxhash==3.6.0",
    "sentence-transformers==5.2.0",
    "langdetect==1.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
]
dev = [
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "sqlalchemy[mypy]",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
